--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -83,6 +83,7 @@
 @media (max-width: 760px) {
   .sidebar {
     width: 100%;
+    height: auto;
     max-height: 40vh;
   }
 }
